# spectrum

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  SpectrumCore.podspec  SpectrumKit.podspec  build.gradle  gradle.properties  help.html  index.html  settings.gradle  sitemap.xml  users.html
android/: CMakeLists.txt  build.gradle  gradle.properties  proguard-spectrum.pro
android/sample/: build.gradle
android/sample/src/main/: AndroidManifest.xml
android/spectrumdefault/: build.gradle  gradle.properties
android/spectrumdefault/src/main/: AndroidManifest.xml
android/spectrumpluginavif/src/main/: AndroidManifest.xml
android/spectrumpluginjpeg/: CMakeLists.txt  build.gradle  gradle.properties
android/spectrumpluginjpeg/src/main/: AndroidManifest.xml
android/spectrumpluginplatform/: CMakeLists.txt  build.gradle  gradle.properties
android/spectrumpluginplatform/src/main/: AndroidManifest.xml
android/spectrumpluginpng/: CMakeLists.txt  build.gradle  gradle.properties
android/spectrumpluginpng/src/main/: AndroidManifest.xml
android/spectrumpluginwebp/: CMakeLists.txt  build.gradle  gradle.properties
android/spectrumpluginwebp/src/main/: AndroidManifest.xml
android/spectrumtests/: build.gradle  gradle.properties
android/spectrumtests/src/main/: AndroidManifest.xml
android/spectrumtestutils/: CMakeLists.txt  build.gradle  gradle.properties
android/spectrumtestutils/src/main/: AndroidManifest.xml
android/src/main/: AndroidManifest.xml
androidLibs/fbjni/: CMakeLists.txt  build.gradle
cpp/: AndroidManifest.xml  CMakeLists.txt  build.gradle
cpp/spectrum/: Configuration.cpp  Configuration.h  Options.cpp  Options.h  Plugin.cpp  Plugin.h  Recipe.h  Result.cpp  Result.h  Rule.cpp  Rule.h  Spectrum.cpp  Spectrum.h  SpectrumException.cpp  SpectrumException.h  Transformations.cpp  Transformations.h
cpp/spectrum/codecs/: CompressorProvider.h  DecompressorProvider.cpp  DecompressorProvider.h  EncodedImageFormatDetector.cpp  EncodedImageFormatDetector.h  EncodedImageFormatDetectorHandlers.cpp  EncodedImageFormatDetectorHandlers.h  EncodedImageSpecificationDetector.cpp  EncodedImageSpecificationDetector.h  ICompressor.cpp  ICompressor.h  IDecompressor.cpp  IDecompressor.h  Repository.cpp  Repository.h
cpp/spectrum/codecs/bitmap/: BitmapCompressor.cpp  BitmapCompressor.h  BitmapDecompressor.cpp  BitmapDecompressor.h
cpp/spectrum/codecs/isobmff/: IsoBmffParser.cpp  IsoBmffParser.h
cpp/spectrum/core/: Constants.h  DataRange.h  Operation.cpp  Operation.h  OperationBuilder.cpp  OperationBuilder.h  PluginAggregator.cpp  PluginAggregator.h  ResizeUtil.cpp  ResizeUtil.h  RuleMatcher.cpp  RuleMatcher.h  RuleRequirementMatcher.cpp  RuleRequirementMatcher.h  SpectrumEnforce.cpp  SpectrumEnforce.h
cpp/spectrum/core/decisions/: BaseDecision.cpp  BaseDecision.h  ChromaSamplingModeDecision.cpp  ChromaSamplingModeDecision.h  MetadataDecision.cpp  MetadataDecision.h  OrientationDecision.cpp  OrientationDecision.h  PixelSpecificationDecision.cpp  PixelSpecificationDecision.h
cpp/spectrum/core/matchers/: All.h  CropMatcher.cpp  ImageFormatMatcher.cpp  PassthroughMatcher.cpp  ResizeMatcher.cpp  ResultMatcher.cpp  ResultMatcher.h  RotateMatcher.cpp
cpp/spectrum/core/proc/: CroppingScanlineProcessingBlock.cpp  CroppingScanlineProcessingBlock.h  RotationScanlineProcessingBlock.cpp  RotationScanlineProcessingBlock.h  ScalingScanlineProcessingBlock.cpp  ScalingScanlineProcessingBlock.h  ScanlineConversion.cpp  ScanlineConversion.h  ScanlineProcessingBlock.h  ScanlinePump.cpp  ScanlinePump.h
cpp/spectrum/core/recipes/: BaseRecipe.cpp  BaseRecipe.h  CopyRecipe.cpp  CopyRecipe.h
cpp/spectrum/core/utils/: Endianness.h  Numeric.cpp  Numeric.h
cpp/spectrum/image/: Color.h  Format.cpp  Format.h  Geometry.cpp  Geometry.h  Metadata.cpp  Metadata.h  Orientation.cpp  Orientation.h  Pixel.cpp  Pixel.h  Scanline.h  Specification.cpp  Specification.h
cpp/spectrum/image/metadata/: Entries.cpp  Entries.h  Entry.cpp  Entry.h  ICCProfile.cpp  ICCProfile.h  Rational.h  ReadContext.h  Utils.cpp  Utils.h
cpp/spectrum/io/: AllocatedImageSink.cpp  AllocatedImageSink.h  FileImageSink.cpp  FileImageSink.h  FileImageSource.cpp  FileImageSource.h  IBitmapImageSink.cpp  IBitmapImageSink.h  IBitmapImageSource.cpp  IBitmapImageSource.h  IEncodedImageSink.cpp  IEncodedImageSink.h  IEncodedImageSource.cpp  IEncodedImageSource.h  IImageSink.cpp  IImageSink.h  IImageSource.cpp  IImageSource.h  RewindableImageSource.cpp  RewindableImageSource.h  VectorImageSink.cpp  VectorImageSink.h  VectorImageSource.cpp  VectorImageSource.h
cpp/spectrum/plugins/avif/: AvifDecompressor.cpp  AvifDecompressor.h  IvfAv1Decompressor.cpp  IvfAv1Decompressor.h  LibAvifTranscodingPlugin.cpp  LibAvifTranscodingPlugin.h
cpp/spectrum/plugins/jpeg/: LibJpegCompressor.cpp  LibJpegCompressor.h  LibJpegConstants.h  LibJpegDctTransformer.cpp  LibJpegDctTransformer.h  LibJpegDecompressor.cpp  LibJpegDecompressor.h  LibJpegLosslessRotateAndCropRecipe.cpp  LibJpegLosslessRotateAndCropRecipe.h  LibJpegSinkManager.cpp  LibJpegSinkManager.h  LibJpegSourceManager.cpp  LibJpegSourceManager.h  LibJpegTranscodingPlugin.cpp  LibJpegTranscodingPlugin.h  LibJpegUtilities.cpp  LibJpegUtilities.h
cpp/spectrum/plugins/png/: LibPngCompressor.cpp  LibPngCompressor.h  LibPngConstants.h  LibPngDecompressor.cpp  LibPngDecompressor.h  LibPngTranscodingPlugin.cpp  LibPngTranscodingPlugin.h
cpp/spectrum/plugins/webp/: LibWebpCompressor.cpp  LibWebpCompressor.h  LibWebpConstants.h  LibWebpDecodePlugin.cpp  LibWebpDecodePlugin.h  LibWebpDecompressor.cpp  (+3 more)
cpp/spectrum/requirements/: Crop.cpp  Crop.h  CropAbsoluteToOrigin.cpp  CropAbsoluteToOrigin.h  CropRect.cpp  CropRect.h  CropRelativeToOrigin.cpp  CropRelativeToOrigin.h  Encode.cpp  Encode.h  Resize.cpp  Resize.h  Rotate.cpp  Rotate.h
cpp/test/unit/: ConfigurationTest.cpp  RuleTest.cpp  SpectrumExceptionTest.cpp  SpectrumTest.cpp
cpp/testutils/src/: BaseTestUtils.cpp  BaseTestUtils.h  GTestTestUtils.h  TestData.cpp  TestData.h  TestData_apple.mm  TestUtils.h
css/: main.css
(+530 files in other folders)
